--- a/poem-thing.cabal
+++ b/poem-thing.cabal
@@ -15,7 +15,10 @@ extra-source-files:  README.md
 
 executable poem-thing
   hs-source-dirs:      src
+  ghc-options:         -threaded
   main-is:             Main.hs
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
+                       , brick
                        , random
+                       , vty
