--- a/cloze-deleter.cabal
+++ b/cloze-deleter.cabal
@@ -1,19 +1,19 @@
-name:                poem-thing
+name:                cloze-deleter
 version:             0.1.0.0
 -- synopsis:
 -- description:
-homepage:            https://github.com/githubuser/poem-thing#readme
+homepage:            https://github.com/branweb1/cloze-deleter#readme
 license:             BSD3
 license-file:        LICENSE
-author:              Author name here
-maintainer:          example@example.com
-copyright:           2020 Author name here
+author:              Brandon Webster
+maintainer:          branweb1@gmail.com
+copyright:           2020 Brandon Webster
 category:            Web
 build-type:          Simple
 cabal-version:       >=1.10
 extra-source-files:  README.md
 
-executable poem-thing
+executable cloze
   hs-source-dirs:      src
   ghc-options:         -threaded
   main-is:             Main.hs
